Added table output and giphy

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     </div>
     <table>
         <tbody id="tbody">
-            
+
         </tbody>
     </table>
+    <img src="" id="conditionImg">
 </body>
 </html>
