Update bg and giphy out

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
         <input type="text" id="loc">
         <button id="enter-btn">Get Weather</button>
     </div>
+    <button id="scale">Convert to C</button>
     <table>
         <tbody id="tbody">
 
         </tbody>
     </table>
-    <img src="" id="conditionImg">
+    <img src="">
 </body>
 </html>
